--- a/views/xarid.ejs
+++ b/views/xarid.ejs
@@ -1,45 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reja</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>REJA</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap"
-      rel="stylesheet"/>
-</head>
-<body style="background-color: greenyellow;">
- <div class="container">
-        <h1 class="display-4 text-center py-1">Reja va Maqsadlar</h1>
-  <div class="jumbotron p-3 shadow-sm">
-    <form action="/create-item" method="POST" id="create-form">  
-         <div class="d-flex align-items-center">
-            <input 
-            id="create-field"
-            name="item"
-            autofocus
-            autocomplete="off"
-            class="form-control mr-3"
-            style="flex: 1"
-            type="text">
-            <button class="btn btn-primary" style="border: radius 20px;">
-                Yangi xarid qo'shish
-            </button>
-         </div>
-    </form>
-    
-    <button class="btn btn-light m-3">Hammasini tozalash</button>
-
-  </div>
-    
-
- </div>
-</body>
+  </head>
+  <body style="background-color: #b8bbd1">
+    <!-- SHU YERDAN YOZASIZ -->
+  </body>
 </html>
