--- a/views/author.ejs
+++ b/views/author.ejs
@@ -38,7 +38,7 @@
                 <div class="left_1">
                     <div class="left_1-1">
                         <img 
-                        src="/public/author/images/profile.svg" width="156px"
+                        src="/author/images/profile.svg" width="156px"
                         height="142px" alt="">
                     </div>
                     <div class="left_1-2"><%=user.name%></div>
