--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -26,12 +26,12 @@
             style="flex: 1"
             type="text">
             <button class="btn btn-primary" style="border: radius 20px;">
-                Yangi xarid qo'shish
+                Yangi reja qo'shish
             </button>
          </div>
     </form>
     
-    <button class="btn btn-light m-3">Hammasini tozalash</button>
+    <button class="btn btn-light m-3">Hammasi rejalarni o'chirish</button>
 
   </div>
     
