--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -42,7 +42,7 @@
         <ul id="item_ul" class="list-group p-3">
           <% items.map((item) => { %>
             <li class="list-group-item d-flex align-items-center justify-content-between">
-              <%= item.reja %>
+             <span class="item-text"> <%= item.reja %> </span>
               <div>
                 <button data-id="<%= item._id %>" class="edit btn btn-dark btn-sm">O'zgartirish</button>
                 <button data-id="<%= item._id %>" class="delete btn btn-dark btn-sm">O'chirish</button>
@@ -52,6 +52,7 @@
         </ul>
       </div>
     </div>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
   </body>
 </html>
