feat: all is done

--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,7 +33,7 @@
             </button>
           </div>
         </form>
-        <button class="btn btn-light m-3">Hammasi rejalarni o'chirish</button>
+        <button class="clean-all btn btn-light m-3">Hamma rejalarni o'chirish</button>
       </div>
     </div>
 
